# llm_datacenter

./: .gitignore  AGENTS.md  CONVENTIONS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/digest/: SKILL.md
.github/workflows/: ci.yml
config/: sources.yaml
data/: index.json  state.json
data/daily/: 2026-07-01.json  2026-07-02.json  2026-07-05.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-13.json  2026-07-15.json  2026-07-17.json  2026-07-19.json  2026-07-22.json
data/run_log/: 2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
design_example/: design-tokens.css  design-tokens.json  neural-radar-design.html
docs/: architecture.md  decisions.md  index.html  preview-neural.html  roadmap.md
docs/assets/: app.js  style.css
docs/data/: index.json
docs/data/daily/: 2026-07-03.json  2026-07-06.json  2026-07-07.json  2026-07-09.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-16.json  2026-07-18.json  (+4 more)
docs/features/: dashboard.md  pipeline.md
docs/notes/: note.css  note.js
docs/requirements/: README.md  v1.0-baseline.md  v1.1-digest-format.md
scripts/: build_site.py  common.py  extract_frames.py  gemini_video.py
tests/unit/: test_build_site.py  test_common.py  test_extract_frames.py  test_gemini_video.py
(+65 files in other folders)
