[project]
name = "llm-datacenter"
version = "0.1.0"
description = "Ежедневная сводка-дашборд новостей об LLM"
requires-python = ">=3.12"

# Сплит тестов: unit (чистая логика, без сети) и integration (сеть/внешние API, вручную).
[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["docs"]
